# ekade

./: .gitignore  0k.hs  0kade.cabal  CONTRIBUTORS.md  PseudoMQ.hs  README.md
0kade/src/: pong.hs
code/: portmap.txt  run.sh
code/c/: .gitignore  README.md
code/clisp/: INSTALL  README  client.lisp  emajl.lisp  ffi.lisp  protocol-misc.lisp
code/clojure/: .gitignore  README  README.md  config.example.clj  project.clj
code/cpp/: CImg.h  IMGresize.cpp  README  abstractimgserver.h  cmd  spec.json
code/csharp/: .gitignore  Global.asax  KadaService.csproj  KadaService.sln  NLog.config  README.md  Web.config.example
code/dsl/: .gitignore  compile.bat  compile.sh
code/go/: README  main.go  pictures.go  servepic.go
code/haskell/: 0kade.cabal  README.md  run.sh
code/haskell/src/: 0k.hs  PseudoMQ.hs  Types.hs  ZeroOpts.hs  pong.hs
code/html/: index.html
code/java/: .classpath  .project  AndroidManifest.xml  README
code/objective-c/: .gitignore  README.md
code/oracle/: ReadMe.txt  aditional_steps.txt  checkandhash.pls  restful_services_10_25_2013.sql  table_ddl.sql  test_feed.pls
code/project/: Default.scala  Dependencies.scala  ProjectServerBuild.scala  Resolvers.scala
code/protobuf/: README.md  compile.bat  compile.sh
code/rust/: .gitignore  Makefile  README.md  kade_client.rs  kade_dns.rs  kade_server.rs
code/scala/: .gitignore  run.bat  run.sh  sbt.bat  sbt.sh
config/: ekade.neven-local
config/certs/: ca-startcom.truststore  emajliramokade.com.crt  (+1 more)
docs/: letak.docx
logs/: README
public/: index.html
src/: PseudoMQ.hs
test/: test.sh
(+338 files in other folders)
