Name:          0kade
Version:       0.1
Build-Type:    Simple
Build-Depends:
  base >= 4.5,
  mtl >= 2.1,
  zeromq3-haskell >= 0.5,
  wai >= 1.4,
  warp >= 1.3.10,
  conduit >= 1.0.0,
  bytestring >= 0.9.2,
  blaze-builder >= 0.3,
  cereal >= 0.3.5,
  aeson >= 0.6.2,
  protobuf >= 0.1.1,
  type-level >= 0.2.4,
  unordered-containers >= 0.2.3,
  semigroups >= 0.10,
  http-types >= 0.8,
  optparse-applicative >= 0.6,
  ghc-prim

Executable: 0k
Main-Is: 0k.hs
Hs-Source-Dirs: src/

Executable: pong
Main-Is: pong.hs
Hs-Source-Dirs: src/
